# audit-filter

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  output_usage.sh  scratch
.github/: dependabot.yml
.github/workflows/: test.yml
example/: .nsprc  README.md  package-lock.json  package.json
pkg/: README.md  audit_exclude.d.ts  audit_exclude.js  audit_exclude_bg.wasm  audit_exclude_bg.wasm.d.ts  audit_filter.d.ts  audit_filter.js  audit_filter_bg.d.ts  audit_filter_bg.js  audit_filter_bg.wasm  cli.js  package-lock.json  package.json
src/: lib.rs  main.rs
tests/: parse_files_and_filter_advisories_by_url_test.rs  parse_test.rs  run_test.rs
tests/fixtures/: README.md  fxa-content-server-ec49757b28e21b49598de2c9f51ebb5cc933d693-npm-6.4.1-audit.json  screenshots-0191b17d3bac5de51efa7acbaa0d52bb26c91573-npm-6.4.1-audit.json  screenshots-1844afe49f853f3c1d8e05ba0bdc84cd598c22d5-npm-6.4.1-audit.json  screenshots-977f8734b4f57db9f8fc82d613cd724e5766ed2d-npm-8.11.0-audit.json  screenshots-e78ee92b9a76ed6796cbdf0a9f643e00efc8b8b1-npm-6.9.0-audit.json  screenshots-recursion-issue-npm-9.5.1-audit.json  screenshots-recursion-issue-npm-9.5.1-nsprc.json
