[package]
name = "audit-filter"
version = "0.4.3"
authors = ["Greg Guthe <gguthe@mozilla.com>"]
exclude = [
	"tests/fixtures/*",
	"example/*",
	"pkg/*",
	"readme_usage.md",
	"output_usage.sh",
]

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown).
description = "Filters npm audit output for use in CI"

# These URLs point to more information about the package. These are
# intended to be webviews of the relevant data, not necessarily compatible
# with VCS tools and the like.
documentation = "https://github.com/mozilla-services/audit-filter"
homepage = "https://github.com/mozilla-services/audit-filter"
repository = "https://github.com/mozilla-services/audit-filter"

# This points to a file under the package root (relative to this `Cargo.toml`).
# The contents of this file are stored and indexed in the registry.
# crates.io will render this file and place the result on the crate's page.
readme = "README.md"

# This is a list of up to five keywords that describe this crate. Keywords
# are searchable on crates.io, and you may choose any words that would
# help someone find this crate.
keywords = []

# This is a list of up to five categories where this crate would fit.
# Categories are a fixed list available at crates.io/category_slugs, and
# they must match exactly.
categories = []

# This is an SPDX 2.1 license expression for this package.  Currently
# crates.io will validate the license provided against a whitelist of
# known license and exception identifiers from the SPDX license list
# 2.4.  Parentheses are not currently supported.
#
# Multiple licenses can be separated with a `/`, although that usage
# is deprecated.  Instead, use a license expression with AND and OR
# operators to get more explicit semantics.
license = "MPL-2.0"

[badges]
travis-ci = { repository = "mozilla-services/audit-filter", branch = "master" }

[dependencies]
serde_json = "1.0.38"
serde = "1.0.87"
serde_derive = "1.0.87"
docopt = "1.1.0"
failure = "0.1.5"
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
